<resources>
    <string name="app_name">click_v1</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="facebook_app_id">804160104620796</string>
    <string name="fb_login_protocol_scheme">fb804160104620796</string>
    <string name="facebook_client_token">962309dc8b74d5de5db0bc9a038b2d3f</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="google_map_api_key">AIzaSyD_OEKDAJ2Ni26UaoxbQDOcAdu2ZrE0hVg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="chat">Chat</string>
    <string name="meet">Meet</string>
    <string name="add">Add</string>
    <string name="me">Me</string>
    <string name="chen">Chen</string>
    <string name="_25">25</string>
    <string name="helsinki">Helsinki</string>
    <string name="profile">Profile</string>
    <string name="view_all">View all</string>
    <string name="online_1h_ago">Online: 1h ago</string>
    <string name="stripe_customer_api">https://api.stripe.com/v1/customers</string>
    <string name="stripe_ephemeral_api">https://api.stripe.com/v1/ephemeral_keys</string>
    <string name="stripe_payment_intent_api">https://api.stripe.com/v1/payment_intents</string>
    <string name="there_are_4_activities_in_sydney_find_out_more">There are 4 activities in Sydney. Find out more!</string>
    <string name="explore_now">Explore now</string>
    <string name="_1h">1h</string>
    <string name="ago">ago</string>
    <string name="my_profile">My profile</string>
    <string name="profile_background_image">Profile background image</string>
    <string name="send_a_message">Send a message</string>
    <string name="card_description">Use one team lunch each month for a \'Lunch and Learn\' session. Have one team member give a presentation about a topic of interest to the group, your company or himself. Nothing like walking away from lunch with newfound knowledge. Welcome to chat and find out more</string>
    <string name="live_until">Live until</string>
    <string name="colon">:</string>
    <string name="_28">28</string>
    <string name="_48">48</string>
    <string name="_10">10</string>
    <string name="activity_type">聚餐活动</string>
    <string name="activity_name">一起去吃饭</string>
    <string name="i_am_here">I am here!</string>
    <string name="_10h">10h</string>
    <string name="custom_marker_icon">custom marker icon</string>
    <string name="rewards_details">创作者将会看到你的留言和随附的星星</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="custom">自定</string>
    <string name="buy_hint">发送自定数量......</string>
    <string name="buy_stars">购买要送出的星星</string>
    <string name="buy_title">赏星星表示支持</string>
    <string name="buy_receiver">Harper</string>
    <string name="buy">购买</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="filters">Filters</string>
    <string name="privacy">Privacy</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="self_introduction">Self Introduction</string>
    <string name="_0_300">0/300</string>
    <string name="save">Save</string>
    <string name="introduction">Introduction</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="current_location">Current Location</string>
    <string name="do_not_show_location">Do Not Show Location</string>
    <string name="distance">Distance</string>
    <string name="_0_10_km">0-10 km</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_your_activity">Create your activity</string>
    <string name="activity_title">Activity Title</string>
    <string name="what_will_you_offer">What will you offer?</string>
    <string name="activity_topic">Activity Topic</string>
    <string name="choose_a_topic">#Choose a Topic</string>
    <string name="activity_distance">Activity Distance</string>
    <string name="_1_km">1 km</string>
    <string name="activity_announcement">Activity announcement</string>
    <string name="start_activity">Start Activity</string>
    <string name="policy">Before your activity is created on map, you agree to the [Agreement]</string>
    <string name="music">Music</string>
    <string name="shopping">Shopping</string>
    <string name="traveling">Traveling</string>
    <string name="enjoy_food">Enjoy Food</string>
    <string name="singing">Singing</string>
    <string name="gym">Gym</string>
    <string name="watch_movie">Watch Movie</string>
    <string name="photographing">Photographing</string>
    <string name="cooking">Cooking</string>
    <string name="meditation">Meditation</string>
    <string name="gardening">Gardening</string>
    <string name="language_exchange">Language Exchange</string>
    <string name="dancing">Dancing</string>
    <string name="check_out">结账</string>
    <string name="_99_stars">99颗星</string>
    <string name="sell_by_app">由Click预售</string>
    <string name="nt_30">NT$30</string>
    <string name="sum">小结</string>
    <string name="total">总计</string>
    <string name="purchase_policy">点按确认付款即表示你同意Click的及Star的使用条款和资料政策</string>
    <string name="purchase">付款</string>
    <string name="custom_marker_image">custom marker image</string>
    <string name="find_activity_around_you">Find Activity Around You</string>
    <string name="delete">Delete</string>
    <string name="dots">。。。</string>
    <string name="edit">Edit</string>

    String publishableKey;

    String secretKey;
    String CustomerId;
    String ephericalKey;
    String clientSecret;

</resources>