<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->

<!--selected marker activity card-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedActivityCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp"
    android:background="@color/primary"
    android:clickable="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <!--    card title  -->
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_3sdp"
            android:text="@string/activity_type"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/activity_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--    card count down  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/primary_dark"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_until"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/hoursText"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/background_short_button"
            android:gravity="center"
            android:text="@string/_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@string/colon"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/minutesText"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/background_short_button"
            android:gravity="center"
            android:text="@string/_28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@string/colon"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/secondsText"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:background="@drawable/background_short_button"
            android:gravity="center"
            android:text="@string/_48" />
    </LinearLayout>

    <!--    card detail  -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxWidth="@dimen/_280sdp"
        android:maxLines="3"
        android:text="@string/card_description"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/imagePoster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!--    card owner  -->
    <LinearLayout
        android:id="@+id/imagePoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:translationZ="@dimen/_100sdp"
        app:layout_constraintBottom_toTopOf="@+id/sendBtn"
        app:layout_constraintStart_toStartOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/creatorImage"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            tools:src="@drawable/profile" />

        <TextView
            android:id="@+id/creatorNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/chen"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <!--    card rewards-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sendStarBtn"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_star"
        android:tint="@color/star_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    card send message to card owner-->
    <LinearLayout
        android:id="@+id/sendBtn"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/background_long_button"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sendBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_a_message"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
